cmake_minimum_required(VERSION 2.8)

project(Lab_1)
add_executable(${PROJECT_NAME} "main.cpp"
                               "contact.cpp"
                               "singleton.cpp"
                               "comparenamemax.cpp"
                               "compareagemax.cpp"
                               "comparephonenumbermax.cpp"
                               "comparenamemin.cpp"
                               "compareagemin.cpp"
                               "comparephonenumbermin.cpp")
